implement dynamic load config schema and add unit test for service
